# configat

./: README.md  check_typing.py  pyproject.toml  tests.py  tox.ini
.github/workflows/: test.yml
configat/: __init__.py  main.py
src/configat/: casting.py  loaders.py  main.py
src/configat/docgen/: __init__.py  __main__.py
src/configat/parser/: __init__.py  __main__.py
