[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "configat"
version = "0.2.0"

[project.optional-dependencies]
parser = ["tabulate", "pathspec"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
exclude_also = ["@typing.overload"]
