[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "configat"
version = "0.2.1"

[project.optional-dependencies]
docgen = ["tabulate", "pathspec"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
exclude_also = ["@typing.overload"]
